--- a/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
+++ b/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-	<DocumentTech.label>документировать знания</DocumentTech.label>
+	<DocumentTech.label>документировать технологии</DocumentTech.label>
 	<DocumentTech.verb>задокументировать</DocumentTech.verb>
 	<DocumentTech.gerund>документировать, используя</DocumentTech.gerund>
 
 	<LearnTech.label>изучать технологии</LearnTech.label>
 	<LearnTech.verb>обучиться</LearnTech.verb>
 	<LearnTech.gerund>обучаться, используя</LearnTech.gerund>
+
+	<ScanBook.label>сканировать книги</ScanBook.label>
+	<ScanBook.verb>сканировать книги</ScanBook.verb>
+	<ScanBook.gerund>сканировать книги, используя</ScanBook.gerund>
 
 	<TrainWeapon.label>обучаться владению оружием</TrainWeapon.label>
 	<TrainWeapon.verb>тренироваться, используя</TrainWeapon.verb>
@@ -20,5 +24,9 @@
 	<ExperimentWeapon.label>экспериментировать с оружием</ExperimentWeapon.label>
 	<ExperimentWeapon.verb>экспериментировать, используя</ExperimentWeapon.verb>
 	<ExperimentWeapon.gerund>экспериментировать, используя</ExperimentWeapon.gerund>
+
+	<!-- Sort of a patch -->
+	<Research.verb>исследовать, используя</Research.verb>
+	<Research.gerund>исследовать, используя</Research.gerund>
 
 </LanguageData>
