Implemented library bonus for network terminal, simplified  where().Any().

--- a/Languages/English/Keyed/HumanResources_keys.xml
+++ b/Languages/English/Keyed/HumanResources_keys.xml
@@ -15,6 +15,7 @@
   <Collapse>Collapse</Collapse>
   <TabCatalogue>Catalog</TabCatalogue>
   <AvailableBooksReport>{0} books in {1} shelves</AvailableBooksReport>
+  <!--NEW--><AvailableOnNetwork>{0} technologies online</AvailableOnNetwork>
   <ClickToAssignForStudying>Left-click to assign for studying.</ClickToAssignForStudying>
   <ClickToAssignForDocumentation>Left-click to assign for documentation.</ClickToAssignForDocumentation>
   <ClickToUnassign>Left-click to unassign.</ClickToUnassign>
