--- a/Languages/Russian/DefInjected/JobDef/Jobs.xml
+++ b/Languages/Russian/DefInjected/JobDef/Jobs.xml
@@ -7,7 +7,7 @@
 	<ResearchTech.reportString>исследует</ResearchTech.reportString>
 	<ScanBook.reportString>сканирует</ScanBook.reportString>
 
-	<TrainWeapon.reportString>тренируется с оружием</TrainWeapon.reportString>
+	<TrainWeapon.reportString>учится владеть оружием</TrainWeapon.reportString>
 	<PlayAtDummy.reportString>практикуется в рукопашном бою</PlayAtDummy.reportString>
 	<PlayAtTarget.reportString>практикуется в стрельбе</PlayAtTarget.reportString>
 
