--- a/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
+++ b/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
@@ -3,30 +3,29 @@
 
 	<DocumentTech.label>документировать технологии</DocumentTech.label>
 	<DocumentTech.verb>задокументировать</DocumentTech.verb>
-	<DocumentTech.gerund>документировать, используя</DocumentTech.gerund>
+	<DocumentTech.gerund>документировать технологию, используя</DocumentTech.gerund>
 
 	<LearnTech.label>изучать технологии</LearnTech.label>
-	<LearnTech.verb>обучиться</LearnTech.verb>
-	<LearnTech.gerund>обучаться, используя</LearnTech.gerund>
+	<LearnTech.verb>изучить</LearnTech.verb>
+	<LearnTech.gerund>изучить технологию, используя</LearnTech.gerund>
 
-	<ScanBook.label>сканировать книгу</ScanBook.label>
+	<ScanBook.label>сканировать книги</ScanBook.label>
 	<ScanBook.verb>сканировать книгу, используя</ScanBook.verb>
 	<ScanBook.gerund>сканировать книгу, используя</ScanBook.gerund>
 
-	<TrainWeapon.label>обучаться владению оружием</TrainWeapon.label>
-	<TrainWeapon.verb>тренироваться, используя</TrainWeapon.verb>
-	<TrainWeapon.gerund>тренироваться, используя</TrainWeapon.gerund>
+	<TrainWeapon.label>учиться владеть оружием</TrainWeapon.label>
+	<TrainWeapon.verb>учиться владеть оружием, используя</TrainWeapon.verb>
+	<TrainWeapon.gerund>учиться владеть оружием, используя</TrainWeapon.gerund>
 
 	<PracticeWeapon.label>практиковаться в применении оружия</PracticeWeapon.label>
-	<PracticeWeapon.verb>практиковаться, используя</PracticeWeapon.verb>
-	<PracticeWeapon.gerund>практиковаться, используя</PracticeWeapon.gerund>
+	<PracticeWeapon.verb>практиковаться в применении оружия, используя</PracticeWeapon.verb>
+	<PracticeWeapon.gerund>практиковаться в применении оружия, используя</PracticeWeapon.gerund>
 
 	<ExperimentWeapon.label>экспериментировать с оружием</ExperimentWeapon.label>
-	<ExperimentWeapon.verb>экспериментировать, используя</ExperimentWeapon.verb>
-	<ExperimentWeapon.gerund>экспериментировать, используя</ExperimentWeapon.gerund>
+	<ExperimentWeapon.verb>экспериментировать с оружием, используя</ExperimentWeapon.verb>
+	<ExperimentWeapon.gerund>экспериментировать с оружием, используя</ExperimentWeapon.gerund>
 
 	<!-- Sort of a patch -->
-	<Research.verb>исследовать, используя</Research.verb>
 	<Research.gerund>исследовать, используя</Research.gerund>
 
 </LanguageData>
