--- a/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
+++ b/Languages/Russian/DefInjected/WorkGiverDef/WorkGivers.xml
@@ -13,7 +13,7 @@
 	<ScanBook.verb>сканировать книгу, используя</ScanBook.verb>
 	<ScanBook.gerund>сканировать книгу, используя</ScanBook.gerund>
 
-	<TrainWeapon.label>учиться владеть оружием</TrainWeapon.label>
+	<TrainWeapon.label>обучаться владению оружием</TrainWeapon.label>
 	<TrainWeapon.verb>учиться владеть оружием, используя</TrainWeapon.verb>
 	<TrainWeapon.gerund>учиться владеть оружием, используя</TrainWeapon.gerund>
 
