--- a/Languages/Russian/DefInjected/ThingDef/Things.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Things.xml
@@ -18,10 +18,10 @@
 	<UnfinishedTechBook.label>незавершённая техническая книга</UnfinishedTechBook.label>
 
 	<TechBook.label>техническая книга</TechBook.label>
-	<TechBook.description>Книга, содержащая знания о технологии.</TechBook.description>
+	<TechBook.description>Книга, в которой отражены накопленные знания конкретной технологии.</TechBook.description>
 
 	<TechDrive.label>Цифровой накопитель</TechDrive.label>
-	<TechDrive.description>Жёсткий диск, содержащий информацию о накопленных знаниях о конкретной технологии.</TechDrive.description>
+	<TechDrive.description>Жёсткий диск, содержащий информацию о накопленных знаниях конкретной технологии.</TechDrive.description>
 
 	<Target.label>мишень для стрельбы</Target.label>
 	<Target.description>Мишень для оттачивания своего мастерства в стрельбе.</Target.description>
